examples/errors/invalid-scoping.tw
# Indentation requires scope-creating constructs (functions, etc.)
# This is invalid because no such constructs exist yet
panic
	panic
